k8s-dev/api-gateway-deployment.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api-gateway
  template:
    metadata:
      labels:
        component: api-gateway
    spec:
      containers:
        - name: api-gateway-container
          image: dipanjalmaitra/api-gateway
          ports:
            - containerPort: 8765
