k8s-dev/currency-conversion-deployment.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-conversion-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: currency-conversion
  template:
    metadata:
      labels:
        component: currency-conversion
    spec:
      containers:
        - name: currency-conversion-container
          image: dipanjalmaitra/currency-conversion
          ports:
            - containerPort: 8100
