k8s-dev/currency-exchange-deployment.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: currency-exchange
  template:
    metadata:
      labels:
        component: currency-exchange
    spec:
      containers:
        - name: currency-exchange-container
          image: dipanjalmaitra/currency-exchange
          ports:
            - containerPort: 8000
