k8s-dev/geo-service-deployment.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: geo-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: geo-service
  template:
    metadata:
      labels:
        component: geo-service
    spec:
      containers:
        - name: geo-service-container
          image: dipanjalmaitra/geo-service
          ports:
            - containerPort: 8200
