k8s-dev/naming-server-cluster-ip-service.yml
# @format

apiVersion: v1
kind: Service
metadata:
  name: naming-server-cluster-ip-service
spec:
  type: None
  selector:
    component: naming-server
  ports:
    - port: 8761
      targetPort: 8761
